# escpresso

./: .gitignore  Cargo.toml  LICENSE  README.md
.github/workflows/: ci.yml  release.yml
docs/: COMMANDS.md
examples/: README.md  basic_receipt.sh  receipt.receipt
src/: main.rs
tests/: README.md  command_parsing.rs  tcp_server.rs
tests/raw/: escpos_capture.raw  test.receipt  test1_format.raw  test2_qrcode.raw  test3_simple.raw  test4_receipt.raw  test5_special.raw  test6_spacing.raw  test7_combined.raw  test_cp437.raw  test_win1252.raw  wow.receipt
tests/shell/: convert_image.py  run_all.sh  test_alignment.sh  test_darkness.sh  test_raster.sh  test_receiptio.receipt  test_with_receiptio.sh
