[package]
name = "escpresso"
version = "0.1.2"
edition = "2021"
description = "Virtual ESC/POS thermal receipt printer emulator with GUI preview"
license = "MIT"
repository = "https://github.com/jflaflamme/escpresso"
homepage = "https://github.com/jflaflamme/escpresso"
readme = "README.md"
keywords = ["escpos", "thermal-printer", "receipt", "pos", "emulator"]
categories = ["emulators", "visualization"]
exclude = [
    "tests/shell/",
    "tests/raw/",
    "references/",
    ".claude/",
    "CLAUDE.md",
    "*.pbm",
]

[dependencies]
eframe = "0.29"
egui = "0.29"
tokio = { version = "1", features = ["full"] }
anyhow = "1.0"
encoding_rs = "0.8"
qrcode = "0.14"
codepage-437 = "0.1"
